[project]
name = "UAPGAES"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["tensorflow==2.16.1", "streamlit>=1.41.1", "scikit-learn>=1.6.0", "joblib>=1.4.2", "pandas>=2.2.3", "xgboost>=2.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
